--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Development on <a href="https://github.com/SHITANSHU-SARODE-007" target="_blank">GitHub</a></h2>
-                    <h3 class="section-subheading text-muted">Github projects I am Working on currently.</h3>
+                    <h3 class="section-subheading text-muted">Projects I worked on and pushed in my github repository.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -320,7 +320,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Skill Set</h2>
-                <h3 class="section-subheading text-muted">I used below software languages for my projects development.</h3>
+                <h3 class="section-subheading text-muted">The software development languages which I used for my projects.</h3>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="https://nodejs.org/en/" target="_blank">
