--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
                     </li>
                     <li>
-                        <a href="Shitanshu_Sarode_Resume.pdf" target="_blank"><i class="fa fa-file-code-o"></i> Resume</a>
+                        <a class="page-scroll" href="Shitanshu_Sarode_Resume.pdf" target="_blank"><i class="fa fa-file-code-o"></i> Resume</a>
 
                     </li>
                 </ul>
@@ -231,7 +231,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
+                    <h2 class="section-heading">About Me</h2>
                     <h3 class="section-subheading text-muted">The Journey: Where I started:</h3>
                 </div>
             </div>
@@ -897,8 +897,8 @@
     <script src="js/slider.js"></script>
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
+    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
 
 
 </body>
