--- a/index.html
+++ b/index.html
@@ -232,37 +232,32 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Me</h2>
-                    <h3 class="section-subheading text-muted">The Journey: Where I started:</h3>
+                    <h3 class="section-subheading text-muted">My professional life summary:</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
-                        <li>
+                        <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/st_arnolds.png" alt="St Arnold's School, Indore">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>2000-2008</h4>
-                                    <h4 class="subheading">St Arnold's Hr Sec School, Indore</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Started from playschool at St Arnold's Hr sec School,Indore,India.where I learnt to read, write and even coding in C++. I had the unique opportunity of leading the school in capacity of emerging science student award and picked up valuable experience along the way. Graduated with Physics, Chemistry, Maths & Computer Science as majors.</p>
-                                </div>
+                                <h4>The Journey
+                                    <br>Till
+                                    <br>Now!</h4>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/rgpv.jpg" alt="RGPV">
+                                <img class="img-circle img-responsive" src="img/about/Illinois_Institute_of_Technology_(seal).svg.png" alt="IIT Chicago">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2008-2012</h4>
-                                    <h4 class="subheading">Rajiv Gandhi Proudyogiki Vishwavidyalaya, Indore</h4>
+                                    <h4>2015-2017</h4>
+                                    <h4 class="subheading">Illinois Institute Of Technology, Chicago</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Began the undergraduate school at R.G.P.V Indore, where I learnt many new skills as an electronics & communication engineering student,I learned importance of time & how to live life better.Contributed to Grid solving robot as my major project using arduino as base technology.Learned various fundaments of electrical engineering with Basic computer science skill like: C++, Java & HTML.</p>
+                                    <p class="text-muted">Earned Master's degree in Information Technology, with course structure of 30 credit hours. My academic coursework include subjects like Advanced software Programming (ITMD-515), Advance Topics in Data Management (ITMD 523), Object-Oriented App Develop (ITMD 510), Intro to Open Source Software (ITMO 556), OO Syst Anlys Mod & Des (ITMT 531),UML-Based Software Development (ITMD 532),
+                                        Rich Internet Applications (ITMD 565), Software Testing & Maintenance (ITMD 536), Intelligent Device Apps Android (ITMD 555), Project Management for ITM (ITMM 571).
+                                        I also became student assistant in fall-2015 career fair to assist in the venue. GPA: 3.70/4.0 </p>
                                 </div>
                             </div>
                         </li>
@@ -285,25 +280,37 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/Illinois_Institute_of_Technology_(seal).svg.png" alt="IIT Chicago">
+                                <img class="img-circle img-responsive" src="img/about/rgpv.jpg" alt="RGPV">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2015-2017</h4>
-                                    <h4 class="subheading">Illinois Institute Of Technology, Chicago</h4>
+                                    <h4>2008-2012</h4>
+                                    <h4 class="subheading">Rajiv Gandhi Proudyogiki Vishwavidyalaya, Indore</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Earned Master's degree in Information Technology, with course structure of 30 credit hours. My academic coursework include subjects like Advanced software Programming (ITMD-515), Advance Topics in Data Management (ITMD 523), Object-Oriented App Develop (ITMD 510), Intro to Open Source Software (ITMO 556), OO Syst Anlys Mod & Des (ITMT 531),UML-Based Software Development (ITMD 532),
-                                        Rich Internet Applications (ITMD 565), Software Testing & Maintenance (ITMD 536), Intelligent Device Apps Android (ITMD 555), Project Management for ITM (ITMM 571).
-                                        I also became student assistant in fall-2015 career fair to assist in the venue. GPA: 3.70/4.0 </p>
+                                    <p class="text-muted">Began the undergraduate school at R.G.P.V Indore, where I learnt many new skills as an electronics & communication engineering student,I learned importance of time & how to live life better.Contributed to Grid solving robot as my major project using arduino as base technology.Learned various fundaments of electrical engineering with Basic computer science skill like: C++, Java & HTML.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/st_arnolds.png" alt="St Arnold's School, Indore">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>2000-2008</h4>
+                                    <h4 class="subheading">St Arnold's Hr Sec School, Indore</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Started from playschool at St Arnold's Hr sec School,Indore,India.where I learnt to read, write and even coding in C++. I had the unique opportunity of leading the school in capacity of emerging science student award and picked up valuable experience along the way. Graduated with Physics, Chemistry, Maths & Computer Science as majors.</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Journey
-                                    <br>Will
-                                    <br>Continue!</h4>
+                                <h4>From where
+                                    <br> I
+                                    <br>Started!</h4>
                             </div>
                         </li>
                     </ul>
